// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <GifGrid /> Debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      nameCategory="One Punch"
      title="testing.jpg"
      url="https://localhost/testing.jpg"
    />
    <GifGridItem
      id="ABCDE"
      key="ABCDE"
      nameCategory="One Punch"
      title="testing.jpg"
      url="https://localhost/testing.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el componente <GifGrid /> Debe de renderizar correctamente el componente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <Spinner />
  <div
    className="card-grid"
  />
</Fragment>
`;
